# appconfig_package

./: README.md  TODO  build.bat  build_prod.bat  pyproject.toml  setup.cfg  test_package.py
src/appconfig/: appconfig.py
tests/: test_appconfig.py
tests/config/: test.configdef.json  test.logging.conf
