[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.bumpver]
current_version = "0.0.6.1006-alpha"
version_pattern = "MAJOR.MINOR.PATCH.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"setup.cfg" = [
    'version = {version}',
]

