[metadata]
name = appconfig-pavelsuk
version = 0.0.3
author = Pavel Suk
author_email = pavelsuk@users.noreply.github.com
description = Package for application configs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pavelsuk/appconfig_package
project_urls =
    Bug Tracker = https://github.com/pavelsuk/appconfig_package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
namespaces = false